gccida/g1/do_jump_by_parts_greater_rtx
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_jump_by_parts_greater_rtx/src/expr.c:10220:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_jump_by_parts_greater_rtx/src/expr.c:10263:30: error: invalid suffix 'orce' on integer constant
v8 = operand_sub*(short *)0xforce( op0, v6 - v7, mode); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_jump_by_parts_greater_rtx/src/expr.c:10263:6: error: use of undeclared identifier 'operand_sub'
v8 = operand_sub*(short *)0xforce( op0, v6 - v7, mode); 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_jump_by_parts_greater_rtx/src/expr.c:10264:30: error: invalid suffix 'orce' on integer constant
v9 = operand_sub*(short *)0xforce( op1, v6 - v7, mode); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_jump_by_parts_greater_rtx/src/expr.c:10264:6: error: use of undeclared identifier 'operand_sub'
v9 = operand_sub*(short *)0xforce( op1, v6 - v7, mode); 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_jump_by_parts_greater_rtx/src/expr.c:10265:79: error: invalid suffix 'xmode' on integer constant
do_compare_rtx_and_jump( v8, v9, GT, unsignedp != 0 || v7 - 1 > 0, *(short *)0xmode, 0LL, 0LL, if_true_labela); 
                                                                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_jump_by_parts_greater_rtx/src/expr.c:10266:60: error: invalid suffix 'xmode' on integer constant
do_compare_rtx_and_jump( v8, v9, NE, unsignedp, *(short *)0xmode, 0LL, 0LL, if_false_labela); 
                                                           ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_jump_by_parts_greater_rtx/src/obj/expr.o] Error 1
